--- a/AppProduct.Shared.Blazor/Pages/OrderDetails.razor
+++ b/AppProduct.Shared.Blazor/Pages/OrderDetails.razor
@@ -111,13 +111,28 @@
                                                     }
                                                 </MudItem>
                                                 <MudItem xs="12" sm="6">
+                                                    @{
+                                                        var product = item.Product;
+                                                        var productName = string.IsNullOrWhiteSpace(product?.Name)
+                                                            ? "Product information unavailable"
+                                                            : product!.Name;
+
+                                                        var description = product?.Description;
+                                                        var descriptionText = string.IsNullOrWhiteSpace(description)
+                                                            ? "No additional details available."
+                                                            : description!.Length > 100
+                                                                ? $"{description.Substring(0, 100)}..."
+                                                                : description;
+
+                                                        var unitPriceText = item.UnitPrice.HasValue
+                                                            ? item.UnitPrice.Value.ToString("C")
+                                                            : "N/A";
+                                                    }
                                                     <MudStack Spacing="1">
-                                                        <MudText Typo="Typo.subtitle1">@item.Product?.Name</MudText>
-                                                        <MudText Typo="Typo.body2" Color="Color.Default">
-                                                            @item.Product?.Description?.Substring(0, Math.Min(item.Product.Description.Length, 100))@(item.Product?.Description?.Length > 100 ? "..." : "")
-                                                        </MudText>
+                                                        <MudText Typo="Typo.subtitle1">@productName</MudText>
+                                                        <MudText Typo="Typo.body2" Color="Color.Default">@descriptionText</MudText>
                                                         <MudText Typo="Typo.body2" Color="Color.Primary">
-                                                            Unit Price: @item.UnitPrice?.ToString("C")
+                                                            Unit Price: @unitPriceText
                                                         </MudText>
                                                     </MudStack>
                                                 </MudItem>
