--- a/AppProduct.Shared.Blazor/Pages/AddProduct.razor
+++ b/AppProduct.Shared.Blazor/Pages/AddProduct.razor
@@ -9,6 +9,7 @@
             <MudText Typo="Typo.h6">Add Product</MudText>
         </TitleContent>
         <DialogContent>
+            <MudTextField @bind-Value="record.Model" For="@(() => record.Model)" Label="Model" />
             <MudTextField @bind-Value="record.Name" For="@(() => record.Name)" Label="Name" />
             <MudTextField @bind-Value="record.Description" For="@(() => record.Description)" Label="Description" />
             <MudTextField @bind-Value="record.DetailedSpecs" For="@(() => record.DetailedSpecs)" Label="DetailedSpecs" />
