--- a/AppProduct.Shared.Blazor/Components/ProductCard.razor
+++ b/AppProduct.Shared.Blazor/Components/ProductCard.razor
@@ -6,7 +6,7 @@
                   Style="background-size: cover; background-position: center;" />
     
     <MudCardContent Style="flex-grow: 1; display: flex; flex-direction: column;">
-        <MudText Typo="Typo.h6" Class="mb-2">@Product?.Name</MudText>
+    <MudText Typo="Typo.h6" Class="mb-2">@Product.GetDisplayName()</MudText>
         
         @if (Product?.ProductReview?.Any() == true)
         {
